tests/test0140.ctr
'SINGLE_LANGUAGE'.

Pen write: 'Trigger an error'.




{ Pen write: 'aaa'. 
	{

		thisBlock error: 'Hi!'.
		} run.


} run.



